2008-09-10  Michael Smith <msmith@songbirdnest.com>

	* sys/dshowdecwrapper/Makefile.am:
	* sys/dshowdecwrapper/gstdshowaudiodec.c:
	* sys/dshowdecwrapper/gstdshowaudiodec.cpp:
	* sys/dshowdecwrapper/gstdshowaudiodec.h:
	* sys/dshowdecwrapper/gstdshowdecwrapper.c:
	* sys/dshowdecwrapper/gstdshowdecwrapper.cpp:
	* sys/dshowdecwrapper/gstdshowdecwrapper.h:
	* sys/dshowdecwrapper/gstdshowfakesrc.cpp:
	* sys/dshowdecwrapper/gstdshowfakesrc.h:
	* sys/dshowdecwrapper/gstdshowutil.cpp:
	* sys/dshowdecwrapper/gstdshowutil.h:
	* sys/dshowdecwrapper/gstdshowvideodec.c:
	* sys/dshowdecwrapper/gstdshowvideodec.cpp:
	* sys/dshowdecwrapper/gstdshowvideodec.h:
	  Major rewrite of dshowdecwrapper. Converts code to
	  C++, moves to direct use of DirectShow base classes,
	  make a lot of code clearer, simplify, etc.
	  Fix decode of MP3 on Vista by working around an apparent
	  bug in the decoder.

2008-09-10  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* sys/winks/gstksclock.c (gst_ks_clock_worker_thread_func,
	  gst_ks_clock_start):
	  Synchronize KS clock as a single-shot operation for now, there's not
	  much point in doing it periodically until we're actually using the
	  KS timestamps for anything else than just discarding old frames.
	* sys/winks/gstksvideosrc.c (gst_ks_video_src_open_device):
	  Provide the GstClock when opening the device if we already have one.

2008-09-10  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* sys/winks/gstksvideodevice.c (GST_DEBUG_IS_ENABLED, last_timestamp,
	  gst_ks_video_device_prepare_buffers, gst_ks_video_device_create_pin,
	  gst_ks_video_device_set_state, gst_ks_video_device_request_frame,
	  gst_ks_video_device_read_frame):
	  Guard against capturing old frames by keeping track of the last
	  timestamp and also zero-fill the buffers before each capture.
	  Only assign a master clock if the pin hasn't already got one.
	  Actually free buffers on the way down to avoid a huge memory leak,